# algorithm-engineering

./: README.md
answers/VL1/: pi-monte.cpp
answers/VL2/: pi2.cpp
answers/VL3/: mandelbrot_warmup.cpp  montecarlo_mod.cpp  pi_warmup.cpp
answers/VL5/fizzbuzz/: CMakeLists.txt  catch_main.cpp  catch_tests_fizzbuzz.cpp
answers/VL5/fizzbuzz/catch/: CMakeLists.txt
answers/VL5/fizzbuzz/fizzbuzz/: CMakeLists.txt
answers/VL5/fizzbuzz/fizzbuzz/include/: fizzbuzz.h
answers/VL5/fizzbuzz/fizzbuzz/src/: fizzbuzz.cpp
answers/VL5/quantpng/: CMakeLists.txt
answers/VL5/quantpng/lodepng/: CMakeLists.txt
answers/VL5/quantpng/quantize/: CMakeLists.txt
project/: CMakeLists.txt  readme.md
project/header/: benchmark.h  cli.h  enhancer.h  utils.h
project/src/: benchmark.cpp  cli.cpp  enhancer.cpp  main.cpp  utils.cpp
